# dials

./: .azure-pipelines.yml  .bumpversion.toml  .clang-format  .codecov.yml  .flake8  .git-blame-ignore-revs  .git-notifier  .gitattributes  .gitignore  .gitmodules  .known-python3-violations  .pre-commit-config.yaml  .python3-test-failures  .travis.yml  1522.bugfix  AUTHORS  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  Config.cmake.in  DEVELOPMENT.md  DEVELOPMENT_V2.md  Dockerfile  Jenkinsfile  LICENSE  LICENSE.txt  README.md  SConscript  XXX.misc  __init__.py  build.py  config.h  conftest.py  dependencies.yaml  docker-entrypoint.sh  error.h  libtbx_config  libtbx_refresh.py  license.txt  phil.py  (+10 more)
dx2/: CMakeLists.txt  empty.cxx
src/dials/algorithms/: CMakeLists.txt  SConscript
src/dials/array_family/: CMakeLists.txt  YASH_TEST.py  __init__.py  binner.h  flex.py  flex_ext.py  flex_table.h  import_scitbx_af.h  reflection.h  reflection_table.h  reflection_table_msgpack_adapter.h  scitbx_shared_and_versa.h  shoebox_extractor.h  sort_index.h  util.h
src/dials/util/: CMakeLists.txt  SConscript  __init__.py  add_hash.py  ascii_art.py  batch_handling.py  best.py  citations.py  cluster_map.py  combine_experiments.py  command_line.py  exclude_images.py  export_bitmaps.py  export_json.py  export_mmcif.py  export_mtz.py  export_mtz_helpers.h  export_pets.py  export_sadabs.py  export_shelx.py  export_text.py  export_xds_ascii.py  ext.py  filter_reflections.py  image.py  image_grouping.py  installer.py  intensity_explorer.py  log.py  make_dist.phil  masking.h  masking.py  matplotlib_utils.py  mosflm.py  mp.py  multi_dataset_handling.py  nexus_old.py  options.py  phil.py  plotly_utils.py  (+19 more)
tests/: CMakeLists.txt  SConscript  test_cpp_components.py  test_crystal.cxx  test_example.cxx  test_make_models.cxx  test_phil.py  test_plot_reflections.py  test_pychef.py  test_read_h5_array.cxx  test_reflection_table.cxx  test_scan_varying_integration_bug.py  test_scitbx.py  test_write_h5_array.cxx
tests/algorithms/background/: test_gmodel.py  test_modeller.py  test_mosflm_outlier_rejector.py  test_outlier_rejector.py
tests/algorithms/clustering/: test_observers.py  test_plots.py  test_unit_cell.py
tests/algorithms/correlation/: test_analysis.py
tests/algorithms/generate_test_reflections/: test_generate_test_refl.py
tests/algorithms/image/: test_centroid.py
tests/algorithms/indexing/: test_assign_indices.py  test_compare_orientation_matrices.py  test_index.py  test_max_cell.py  test_model_evaluation.py  test_non_primitive_basis.py  test_phi_scan.py  test_symmetry.py
tests/algorithms/integration/: test_corrections.py  test_filter_overlaps.py  test_filtering.py  test_integrator.py  test_interface.py  test_kapton.py  test_parallel_integrator.py  test_processor.py  test_simple_integrate.py  test_timing_info.py
tests/algorithms/merging/: test_french_wilson.py  test_merge.py
tests/algorithms/polygon/: test_spatial_interpolation.py
tests/algorithms/profile_model/: test_calculator.py  test_ewald_sphere_sampler.py  test_profile_model.py
tests/algorithms/refinement/: __init__.py  setup_geometry.py  setup_minimiser.py  sim_images.py  test_angle_derivatives_wrt_vector_elts.py  test_beam_parameters.py  test_centroid_analysis_fast.py  test_centroid_outlier.py  test_constraints.py  test_crystal_parameters.py  test_cspad_refinement.py  test_detector_parameters.py  test_dials-423.py  test_finite_diffs.py  test_goniometer_parameters.py  test_hierarchical_detector_refinement.py  test_multi_experiment_refinement.py  test_multi_panel_detector_parameterisation.py  test_orientation_refinement.py  test_parameter_auto_reduction.py  test_prediction_parameters.py  test_ref_passage_categorisation.py  test_refine_multi_stills.py  test_refine_multi_wedges.py  test_refinement_regression.py  test_refiner_config.py  test_refiner_units.py  test_reflection_manager.py  test_restraints_gradients.py  test_restraints_parameterisation.py  test_rotation_decomposition.py  test_scan_varying_beam_refinement.py  test_scan_varying_block_calculation.py  (+8 more)
tests/array_family/: test_flex_shoebox.py  test_identifiers_handling.py  test_reflection_table.py
tests/command_line/: test_align_crystal.py  test_anvil_correction.py  test_apply_mask.py  test_assign_experiment_identifiers.py  test_background.py  test_check_indexing_symmetry.py  test_cluster_unit_cell.py  test_combine_experiments.py  test_compare_orientation_matrices.py  test_compute_delta_cchalf.py  test_convert_to_cbf.py  test_correlation_matrix.py  test_cosym.py  test_create_profile_model.py  test_damage_analysis.py  test_detect_blanks.py  test_estimate_gain.py  test_estimate_resolution.py  test_export.py  test_export_best.py  test_export_bitmaps.py  test_export_mosflm.py  test_export_xds.py  test_filter_blanks.py  test_filter_reflections.py  test_find_bad_pixels.py  test_find_hot_pixels.py  test_find_rotation_axis.py  test_find_spots.py  test_find_spots_server_client.py  test_frame_orientations.py  test_generate_distortion_maps.py  test_generate_mask.py  test_goniometer_calibration.py  test_handling_of_crystalless_experiment_models.py  test_import.py  test_import_mtz.py  test_import_xds.py  test_indexed_as_integrated.py  test_integrate.py  (+40 more)
tests/data/: cut_strong.refl
tests/framework/: test_interface.py
tests/pychef/: test_pychef.py
tests/report/: test_analysis.py  test_plots.py
tests/util/: __init__.py  test_ascii_art.py  test_batch_handling.py  test_command_line.py  test_detect_blanks.py  test_exception_handler.py  test_exclude_images.py  test_export_bitmaps.py  test_export_mtz.py  test_export_shelx.py  test_filter_reflections_export.py  test_htcondor_classad.py  test_htcondor_job_classad.py  test_image_grouping.py  test_log.py  test_masking.py  test_missing_reflections.py  test_mp.py  test_multi_dataset_handling.py  test_nexus.py  test_nexus_multi_experiment.py  test_observer.py  test_options.py  test_python_streambuf.py  test_reference.py  test_render_3d.py  test_resolution_analysis.py  test_slice.py  test_table_as_hdf5_file.py  tst_thread_pool.cc
(+5216 files in other folders)
