add_subdirectory(background)
add_subdirectory(centroid)
add_subdirectory(filtering)
add_subdirectory(image)
add_subdirectory(indexing)
add_subdirectory(integration)
add_subdirectory(polygon)
add_subdirectory(profile_model)
add_subdirectory(refinement)
add_subdirectory(rs_mapper)
add_subdirectory(scaling)
add_subdirectory(shoebox)
add_subdirectory(simulation)
add_subdirectory(spot_finding)
add_subdirectory(spot_prediction)
add_subdirectory(statistics)